@@ -16,9 +16,10 @@
  */
 #include <apr.h>
 #include <ap_config.h>
-#include <ap_regex.h>
 #include <apr_strings.h>
 #include <httpd.h>
+
+#include "mod_chxj.h"
 
 #include "chxj_preg_replace.h"
 
